<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginbg">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeHeader"></RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/loginlogo"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >
                <com.example.isgoman_kotlin.manager.CustomEditTextRegular
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/name"
                    android:paddingLeft="20dp"
                    android:textSize="15sp"

                    android:inputType="text"
                    android:textColorHint="@color/login_hint_textcolor"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"
                    android:background="@drawable/rounded_corner_loginedittextbg"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >
                <com.example.isgoman_kotlin.manager.CustomEditTextRegular
                    android:id="@+id/editPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/eight_digit_phone_no"
                    android:paddingLeft="20dp"
                    android:textSize="15sp"

                    android:inputType="phone"
                    android:textColorHint="@color/login_hint_textcolor"
                    android:textColor="@color/black"                  android:imeOptions="actionNext"
                    android:background="@drawable/rounded_corner_loginedittextbg"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                >
                <com.example.isgoman_kotlin.manager.CustomEditTextRegular
                    android:id="@+id/editTextEmailID"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/email_id"
                    android:paddingLeft="20dp"
                    android:textSize="15sp"

                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/login_hint_textcolor"
                    android:textColor="@color/black"                    android:imeOptions="actionNext"
                    android:background="@drawable/rounded_corner_loginedittextbg"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >
                <com.example.isgoman_kotlin.manager.CustomEditTextRegular
                    android:id="@+id/editTextStudentID"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/student_id"
                    android:paddingLeft="20dp"
                    android:inputType="text"
                    android:textSize="15sp"

                    android:textColorHint="@color/login_hint_textcolor"
                    android:textColor="@color/black"
                    android:imeOptions="actionDone"
                    android:background="@drawable/rounded_corner_loginedittextbg"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"

                >
                <com.example.isgoman_kotlin.manager.CustomEditTextRegular
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/password"
                    android:paddingLeft="20dp"
                    android:inputType="textPassword"
                    android:textColorHint="@color/login_hint_textcolor"
                    android:textColor="@color/login_hint_textcolor"
                    android:imeOptions="actionNext"
                    android:background="@drawable/rounded_corner_loginedittextbg"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                >
                <com.example.isgoman_kotlin.manager.CustomEditTextRegular
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/confirm_pasword"
                    android:paddingLeft="20dp"
                    android:inputType="textPassword"
                    android:textColorHint="@color/login_hint_textcolor"
                    android:textColor="@color/login_hint_textcolor"                    android:imeOptions="actionDone"
                    android:background="@drawable/rounded_corner_loginedittextbg"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                >
                <com.example.isgoman_kotlin.manager.CustomButtonRegular
                    android:id="@+id/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/continue_word"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_corner_loginbtn_bg"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>